--- a/index.html
+++ b/index.html
@@ -53,7 +53,25 @@
   <br> <br>
   <a class="button2" href="#">learn more</a></p>
 
-  
+   <h3 class="section-title2"> ADVANCE FEATURES:</h3>
+   <h4 class= "subtitle2"> An arcade</h4>
+    <p>Two 16-position arcade style joysticks and dual stereo headphone jacks.</p>
+      <br> 
+    <a class="button3" href="#">learn more</a></p>
+  </div>
+
+  <h4 class= "subtitle3"> A color TV</h4>
+<p>A full-fledged 9" color television, complete with 84 channel support</p>
+  <br> 
+<a class="button3" href="#">learn more</a></p>
+</div>
+ <br> 
+<h4 class= "subtitle4"> A computer</h4>
+<p>Monitor can be directly connected to computer peripherals. </p>
+<br> 
+<a class="button4" href="#">learn more</a></p>
+</div>
+
 
 </body>
 </html>
