--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <h2 class="section-title">It’s a COMPUTER, it’s a COLOR TV, it’s an ARCADE.</h2>
 
 
-<h4 class="subtitle">We put it all together just for you!</h4>
+<h4 class="subtitle1">We put it all together just for you!</h4>
     <p>When you're ready for serious business, power-on to the Master Keyboard. Our state-of-the-art Microprocessor and the RAM packed (64K) internal components (expandable to 128K) turn this system into one of the most powerful computers on the market.
       When the business gets tiresome and you want some real excitement, choose one of our 12 action-packed games ... they'll blow you away. And don't feel sorry if you have a large library of Atari VCS, or ColecoVision games, because you can enjoy them through our expansion modules.
       This revolutionary system doesn't just claim to duplicate the arcade experience... it surpasses it! And it's portable too, A/C or D/C. Plus 3 dimensional graphics, zoom and other special visual effects. The unique built-in sound system simulates echo and reverberation for authentic reproduction of explosions, crowds, music, etc. And you can hear it all without disturbing others. As a Color TV, it's better than most, with 2 independent systems to guarantee the sharpest resolution for the Computer/Game Systems and TV.</p>  
@@ -41,7 +41,7 @@
 <a class="button" href="#">learn More</a>
 </div>
 
-<h4 class="subtitle">Entertainment Surpassing
+<h4 class="subtitle2">Entertainment Surpassing
       <br>
       the "Real Arcade Game" Experience</h4>
 
@@ -54,7 +54,7 @@
   <a class="button2" href="#">learn more</a></p>
 
    <h3 class="section-title2"> ADVANCE FEATURES:</h3>
-   <h4 class= "subtitle2"> An arcade</h4>
+   <h4 class= "subtitle3"> An arcade</h4>
     <p>Two 16-position arcade style joysticks and dual stereo headphone jacks.</p>
       <br> 
     <a class="button3" href="#">learn more</a></p>
@@ -66,7 +66,7 @@
 <a class="button3" href="#">learn more</a></p>
 </div>
  <br> 
-<h4 class= "subtitle4"> A computer</h4>
+<h4 class= "subtitle3"> A computer</h4>
 <p>Monitor can be directly connected to computer peripherals. </p>
 <br> 
 <a class="button4" href="#">learn more</a></p>
