case css + colonne css

--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
 
   <h2 class="section-title">It’s a COMPUTER, it’s a COLOR TV, it’s an ARCADE.</h2>
 
+<div class="case">
+  <div class="colonne1">
+<div>
 
 <h4 class="subtitle1">We put it all together just for you!</h4>
     <p>When you're ready for serious business, power-on to the Master Keyboard. Our state-of-the-art Microprocessor and the RAM packed (64K) internal components (expandable to 128K) turn this system into one of the most powerful computers on the market.
@@ -40,6 +43,20 @@
 
 <a class="button" href="#">learn More</a>
 </div>
+</div>
+
+<br>
+
+<div class="colonne2"> <img src="img/ordinateur1.png"></div>
+
+<br>
+
+</div>
+
+<div class="case">
+      <div class="colonne3"><img src="img/ordinateur2.png"></img></div>
+    
+<div class="colonne4">
 
 <h4 class="subtitle2">Entertainment Surpassing
       <br>
@@ -54,24 +71,43 @@
   <a class="button2" href="#">learn more</a></p>
 
    <h3 class="section-title2"> ADVANCE FEATURES:</h3>
+    <div class="case2">
+          <div class="colonne5">
    <h4 class= "subtitle3"> An arcade</h4>
     <p>Two 16-position arcade style joysticks and dual stereo headphone jacks.</p>
       <br> 
     <a class="button3" href="#">learn more</a></p>
   </div>
 
+   <div class="colonne6"><img src="img/image3.png"></img></div> 
+<br>
+  </div>
+
+<div class="case3">
+      <div class="colonne5">
+
   <h4 class= "subtitle3"> A color TV</h4>
 <p>A full-fledged 9" color television, complete with 84 channel support</p>
   <br> 
 <a class="button3" href="#">learn more</a></p>
 </div>
+
+<div class="colonne6"><img src="img/image4.png"></img></div>
+<br>
+</div>
+
+<div class="case4">
+    <div class="colonne5">
+
  <br> 
 <h4 class= "subtitle3"> A computer</h4>
 <p>Monitor can be directly connected to computer peripherals. </p>
 <br> 
 <a class="button4" href="#">learn more</a></p>
 </div>
-
+<div class="colonne6"><img src="img/image5.png"></img></div>
+<br>
+</div>
 
 </body>
 </html>
