nettoyage code css

--- a/index.html
+++ b/index.html
@@ -50,10 +50,11 @@
 <div class="colonne2"> <img src="img/ordinateur1.png"></div>
 
 <br>
-
+</div>
 </div>
 
 <div class="case">
+  <div class= "background1">
       <div class="colonne3"><img src="img/ordinateur2.png"></img></div>
     
 <div class="colonne4">
@@ -72,13 +73,14 @@
 
    <h3 class="section-title2"> ADVANCE FEATURES:</h3>
     <div class="case2">
+      
           <div class="colonne5">
    <h4 class= "subtitle3"> An arcade</h4>
     <p>Two 16-position arcade style joysticks and dual stereo headphone jacks.</p>
       <br> 
     <a class="button3" href="#">learn more</a></p>
   </div>
-
+</div>
    <div class="colonne6"><img src="img/image3.png"></img></div> 
 <br>
   </div>
