--- a/index.html
+++ b/index.html
@@ -111,5 +111,18 @@
 <br>
 </div>
 
+<div class="middle">
+<h3 class="panel">Latest Release :</h3>
+<div class="grid">
+
+<div class="game">
+    <img class="grid-image" src="img/image6.png">
+    <div class="grid-content">
+      <div class="grid-category">game programme</div>
+      <div class="grid-title">Warlords</div>
+      <div class="grid-description">Warlords was a huge arcade success in the early 1980s, and its Atari port was equally loved.</div>
+    </div>
+  </div>
+
 </body>
 </html>
