--- a/index.html
+++ b/index.html
@@ -124,5 +124,60 @@
     </div>
   </div>
 
+  <div class="game">
+    <img class="grid-image" src="img/image7.png">
+    <div class="grid-content">
+      <div class="grid-category">game programme</div>
+      <div class="grid-title">Warlords</div>
+      <div class="grid-description">Warlords was a huge arcade success in the early 1980s, and its Atari port was equally loved.</div>
+    </div>
+  </div>
+
+<div class="game">
+    <img class="grid-image" src="img/image8.png">
+    <div class="grid-content">
+      <div class="grid-category">game programme</div>
+      <div class="grid-title">Warlords</div>
+      <div class="grid-description">Warlords was a huge arcade success in the early 1980s, and its Atari port was equally loved.</div>
+    </div>
+  </div>
+
+<div class="game">
+    <img class="grid-image" src="img/image9.png">
+    <div class="grid-content">
+      <div class="grid-category">game programme</div>
+      <div class="grid-title">Warlords</div>
+      <div class="grid-description">Warlords was a huge arcade success in the early 1980s, and its Atari port was equally loved.</div>
+    </div>
+  </div>
+
+<div class="game">
+    <img class="grid-image" src="img/image10.png">
+    <div class="grid-content">
+      <div class="grid-category">game programme</div>
+      <div class="grid-title">Warlords</div>
+      <div class="grid-description">Warlords was a huge arcade success in the early 1980s, and its Atari port was equally loved.</div>
+    </div>
+  </div>
+
+
+<div class="game">
+    <img class="grid-image" src="img/image11.png">
+    <div class="grid-content">
+      <div class="grid-category">game programme</div>
+      <div class="grid-title">Warlords</div>
+      <div class="grid-description">Warlords was a huge arcade success in the early 1980s, and its Atari port was equally loved.</div>
+    </div>
+  </div>
+
+  <div class="game">
+    <img class="grid-image" src="img/image12.png">
+    <div class="grid-content">
+      <div class="grid-category">game programme</div>
+      <div class="grid-title">Warlords</div>
+      <div class="grid-description">Warlords was a huge arcade success in the early 1980s, and its Atari port was equally loved.</div>
+    </div>
+  </div>
+
 </body>
 </html>
