--- a/index.html
+++ b/index.html
@@ -179,5 +179,50 @@
     </div>
   </div>
 
+<div class="game">
+    <img class="grid-image" src="img/image13.png">
+    <div class="grid-content">
+      <div class="grid-category">game programme</div>
+      <div class="grid-title">Warlords</div>
+      <div class="grid-description">Warlords was a huge arcade success in the early 1980s, and its Atari port was equally loved.</div>
+    </div>
+  </div>
+
+<div class="game">
+    <img class="grid-image" src="img/image14.png">
+    <div class="grid-content">
+      <div class="grid-category">game programme</div>
+      <div class="grid-title">Warlords</div>
+      <div class="grid-description">Warlords was a huge arcade success in the early 1980s, and its Atari port was equally loved.</div>
+    </div>
+  </div>
+
+<div class="game">
+    <img class="grid-image" src="img/image15.png">
+    <div class="grid-content">
+      <div class="grid-category">game programme</div>
+      <div class="grid-title">Warlords</div>
+      <div class="grid-description">Warlords was a huge arcade success in the early 1980s, and its Atari port was equally loved.</div>
+    </div>
+  </div>
+
+<div class="game">
+    <img class="grid-image" src="img/image16.png">
+    <div class="grid-content">
+      <div class="grid-category">game programme</div>
+      <div class="grid-title">Warlords</div>
+      <div class="grid-description">Warlords was a huge arcade success in the early 1980s, and its Atari port was equally loved.</div>
+    </div>
+  </div>
+
+  <div class="game">
+    <img class="grid-image" src="img/image17.png">
+    <div class="grid-content">
+      <div class="grid-category">game programme</div>
+      <div class="grid-title">Warlords</div>
+      <div class="grid-description">Warlords was a huge arcade success in the early 1980s, and its Atari port was equally loved.</div>
+    </div>
+  </div>
+
 </body>
 </html>
