--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
 
 <div class="middle">
 <h3 class="panel">Latest Release :</h3>
+
 <div class="grid">
 
 <div class="game">
@@ -191,7 +192,7 @@
 <div class="game">
     <img class="grid-image" src="img/image14.png">
     <div class="grid-content">
-      <div class="grid-category">game programme</div>
+      <div class="grid-category">BASIC PROGRAMMING</div>
       <div class="grid-title">Warlords</div>
       <div class="grid-description">Warlords was a huge arcade success in the early 1980s, and its Atari port was equally loved.</div>
     </div>
@@ -200,7 +201,7 @@
 <div class="game">
     <img class="grid-image" src="img/image15.png">
     <div class="grid-content">
-      <div class="grid-category">game programme</div>
+      <div class="grid-category">BASIC PROGRAMMING</div>
       <div class="grid-title">Warlords</div>
       <div class="grid-description">Warlords was a huge arcade success in the early 1980s, and its Atari port was equally loved.</div>
     </div>
@@ -209,7 +210,7 @@
 <div class="game">
     <img class="grid-image" src="img/image16.png">
     <div class="grid-content">
-      <div class="grid-category">game programme</div>
+      <div class="grid-category">BASIC PROGRAMMING</div>
       <div class="grid-title">Warlords</div>
       <div class="grid-description">Warlords was a huge arcade success in the early 1980s, and its Atari port was equally loved.</div>
     </div>
@@ -218,7 +219,7 @@
   <div class="game">
     <img class="grid-image" src="img/image17.png">
     <div class="grid-content">
-      <div class="grid-category">game programme</div>
+      <div class="grid-category">BASIC PROGAMMING</div>
       <div class="grid-title">Warlords</div>
       <div class="grid-description">Warlords was a huge arcade success in the early 1980s, and its Atari port was equally loved.</div>
     </div>
