étape formulaire mail

--- a/index.html
+++ b/index.html
@@ -225,5 +225,29 @@
     </div>
   </div>
 
+  <h1 class="Contact">Contact</h1>
+
+  <div class="form">
+  <div class="colonneformulaire1">
+    <div class="form-row">
+      <label for="name">Name</label>
+      <input type="text" name="name" id="name" placeholder='Adam Amrane'>
+    </div>
+
+<div class="form-row">
+      <label for="subject">Subject</label>
+      <select name="subject" id="subject">
+        <option value="Billing">Billing question</option>
+        <option value="Delivery">Delivery enquiries</option>
+        <option value="Other">…</option>
+      </select>
+    </div>
+
+     <div class="form-row">
+      <label for="email">Email adress</label>
+      <input type="email" name="email" id="email" placeholder='adamrane@outlook.fr'>
+    </div>
+  </div>
+
 </body>
 </html>
