--- a/index.html
+++ b/index.html
@@ -224,8 +224,9 @@
       <div class="grid-description">Warlords was a huge arcade success in the early 1980s, and its Atari port was equally loved.</div>
     </div>
   </div>
+</div>
 
-  <h1 class="Contact">Contact</h1>
+  <h5 class="Contact">Contact</h5>
 
   <div class="form">
   <div class="colonneformulaire1">
