--- a/index.html
+++ b/index.html
@@ -250,5 +250,12 @@
     </div>
   </div>
 
+  <div class="colonneformulaire2">
+  <div class="form-row">
+    <label for="message">Message</label>
+    <textarea name="message" id="message" placeholder="In quis luctus nibh, vel iaculis nisl. Nam lobortis turpis eget nibh mollis aliquet. Nam sodales elit id erat aliquam, sed tristique diam consequat."></textarea>
+  </div>
+</div>
+
 </body>
 </html>
